Accessiblity: NCNE landing page contrast fixes.

--- a/src/NCNEPortal/wwwroot/css/site.css
+++ b/src/NCNEPortal/wwwroot/css/site.css
@@ -92,6 +92,12 @@ table.task-list thead tr th {
     border-color: #09315B;
 }
 
+.buttonSelected {
+    background-color: #007e97;
+    color: #fff;
+    font-weight: 400;
+}
+
 .btn-primary:focus, .btn-primary.focus {
     box-shadow: unset;
 }
@@ -375,6 +381,11 @@ body, .sticky-footer-wrapper {
     text-align: right;
     font-size: 11px;
 }
+    /* Site link colour has reduced contrast over footer */
+    .versioning a {
+        color: #09315B; 
+        text-decoration: underline;
+    }
 /* Footer end */
 
 
